--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
   },
   "plugins": ["@typescript-eslint", "simple-import-sort", "import", "react", "react-memo", "react-hooks"],
   "extends": [
+    "next",
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
@@ -19,7 +20,6 @@
   "ignorePatterns": ["*/public", "*/node_modules/*", "*/.next/*", "*/dist/*"],
   "rules": {
     "react/display-name": "off",
-    // The next two rules should be errors. But for now we"ll leave them as warnings since this will take a while
     "react-memo/require-usememo": "error",
     "react-memo/require-memo": "error",
     "react-hooks/rules-of-hooks": "error",
@@ -49,7 +49,8 @@
     "sort-imports": "off",
     "jsx-a11y/no-onchange": "off",
     "jsx-a11y/no-autofocus": "off",
-    "@next/next/no-img-element": "off"
+    "@next/next/no-img-element": "off",
+    "@next/next/no-page-custom-font": "off"
   },
   "settings": {
     "react": {
