--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.33.3",
     "ts-pattern": "^5.0.4"
   },
   "devDependencies": {
