--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "classnames": "^2.3.2",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
+    "framer-motion": "^12.23.25",
+    "lucide-react": "^0.555.0",
     "next": "^13.4.12",
     "nodemailer": "^6.9.7",
     "react": "^18.2.0",
